test/e2e/alcotest/passing/separator_testname.ml
let () =
  Alcotest.run "suite-name"
    [
      ( "with/separator",
        [ Alcotest.test_case "First test case" `Quick (fun () -> ()) ] );
    ]
