test/e2e/alcotest/failing/unicode_testname.ml
let () =
  Alcotest_unix.run "suite-name"
    [ ("🔥", [ Alcotest.test_case "First test case" `Quick (fun () -> ()) ]) ]
